ros2_ws/log/build_2023-04-18_12-26-49/Walle_pkg/stdout_stderr.log
running egg_info
writing ../build/Walle_pkg/Walle_pkg.egg-info/PKG-INFO
writing dependency_links to ../build/Walle_pkg/Walle_pkg.egg-info/dependency_links.txt
writing entry points to ../build/Walle_pkg/Walle_pkg.egg-info/entry_points.txt
writing requirements to ../build/Walle_pkg/Walle_pkg.egg-info/requires.txt
writing top-level names to ../build/Walle_pkg/Walle_pkg.egg-info/top_level.txt
reading manifest file '../build/Walle_pkg/Walle_pkg.egg-info/SOURCES.txt'
writing manifest file '../build/Walle_pkg/Walle_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying Walle_pkg/turtle_bot_teleop_t.py -> /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg
copying Walle_pkg/turtlebot_player_client.py -> /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg
copying Walle_pkg/walle_interface.py -> /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg
copying Walle_pkg/turtlebot_player_server.py -> /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg
copying Walle_pkg/connection_serial.py -> /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg
copying Walle_pkg/turtle_bot_teleop_l.py -> /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg/turtle_bot_teleop_t.py -> /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg
copying /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg/turtlebot_player_client.py -> /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg
copying /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg/walle_interface.py -> /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg
copying /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg/turtlebot_player_server.py -> /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg
copying /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg/connection_serial.py -> /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg
copying /home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/build/lib/Walle_pkg/turtle_bot_teleop_l.py -> /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg
byte-compiling /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/turtle_bot_teleop_t.py to turtle_bot_teleop_t.cpython-310.pyc
byte-compiling /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/turtlebot_player_client.py to turtlebot_player_client.cpython-310.pyc
  File "/home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/turtlebot_player_client.py", line 5
    from  import *
          ^^^^^^
SyntaxError: invalid syntax

byte-compiling /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/walle_interface.py to walle_interface.cpython-310.pyc
byte-compiling /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/turtlebot_player_server.py to turtlebot_player_server.cpython-310.pyc
byte-compiling /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/connection_serial.py to connection_serial.cpython-310.pyc
byte-compiling /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/turtle_bot_teleop_l.py to turtle_bot_teleop_l.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/Walle_pkg/Walle_pkg.egg-info to /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing turtle_bot_teleop script to /home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/Walle_pkg
writing list of installed files to '/home/juan/The_WALL-E_project/ros2_ws/build/Walle_pkg/install.log'
